--- a/html-css/module-03/css/style.css
+++ b/html-css/module-03/css/style.css
@@ -22,6 +22,7 @@ body {
     width: 900px;
     padding-top: 44px;
     padding-bottom: 70px;
+    margin: 0 auto;
 }
 
 
@@ -124,6 +125,10 @@ input[type="radio"].visually-hidden {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
+}
+
+.button-block {
+    text-align: center;
 }
 
 .btn {
