--- a/html-css/module-03/css/style.css
+++ b/html-css/module-03/css/style.css
@@ -15,7 +15,7 @@ body {
     font-size: 14px;
     line-height: 24px;
     text-align: left;
-    margin: 0 auto;
+    /*margin: 0;*/
 }
 
 .wrapper{
@@ -70,8 +70,12 @@ body {
 
   .features-item {
       margin-right: 60px;
-      margin-bottom: 33px;
+      margin-bottom: 135px;
   }
+
+  .features-item:nth-child(n+5) {
+    margin-bottom: 57px;
+}
 
   .features-item:nth-child(2n) {
     margin-right: 0px;
@@ -102,7 +106,6 @@ img.features-image {
     font-weight: 400;
     width: 414px;
     margin: 0;
-    margin-bottom: 135px;
 }
 
 /*.features-announcement:nth-child(n+5) {
