--- a/html-css/module-04/css/style.css
+++ b/html-css/module-04/css/style.css
@@ -39,6 +39,10 @@ img {
     clear: both;
 }
 
+.page-header {
+  margin-bottom: 110px;
+}
+
 .site-logo {
     display: inline-block;
     text-transform: uppercase;
@@ -93,7 +97,11 @@ img {
 
 /*Featured products section*/
 
-h2 {
+.featured-products {
+  margin-bottom: 110px;
+}
+
+.sectoin-header {
 font-family: 'Roboto', sans-serif;
 color: #515151;
 font-size: 48px;/* Приближение из-за подстановки шрифтов */
@@ -101,11 +109,11 @@ font-weight: 900;
 line-height: 32px;/* Приближение из-за подстановки шрифтов */
 text-align: center;
 margin: 0;
-margin-top: 110px;
+/*margin-top: 110px;*/
 text-transform: uppercase;
 }
 
-h2::after {
+.sectoin-header::after {
 display: block;
 content: '';
 background-color:  #1abc9c;
@@ -115,8 +123,10 @@ margin: 0 auto;
 margin-top: 32px;
 }
 
+/*features-list-css*/ 
+
 .features-list {
-    /*margin: 0 auto;*/
+    margin: 0;
     margin-top: 90px;
     padding: 0;
     list-style: none;
@@ -125,14 +135,6 @@ margin-top: 32px;
 .features-list li {
     float:left;
 }
-
-/*features-list-css*/
-
-.features-list{
-    margin: 0;
-    padding: 0;
-    margin-top: 90px;
-  }
   
   .features-list-item{
     float: left;
@@ -226,7 +228,7 @@ margin-top: 32px;
     font-weight: 600;
     line-height: 26px;/* Приближение из-за подстановки шрифтов */
     text-align: left;
-    width: 301px;
+    /*width: 301px;*/
     margin: 0;
     margin-top: 15px;
   }
@@ -247,16 +249,43 @@ margin-top: 32px;
        margin-top: 30px;
     }
 
-    .btn {
+    /*.btn {
 
         color: #ffffff;
-        font-size: 16px;/* Приближение из-за подстановки шрифтов */
+        font-size: 16px;
         font-weight: 300;
-        line-height: 26px;/* Приближение из-за подстановки шрифтов */
+        line-height: 26px;
         display: block;
         margin-top: 15px;
         border-radius: 3px;
         background-color: #4ec6ab;
         width: 160px;
         height: 51px;
+    }
+    */
+
+    .btn {
+
+      display: block;
+      margin-top: 15px;
+      border-radius: 3px;
+      background-color: #4ec6ab;
+      width: 160px;
+      height: 51px;
+      position: relative;
+  }
+
+    .btn a {
+      color: #ffffff;
+      font-size: 16px;/* Приближение из-за подстановки шрифтов */
+      font-weight: 300;
+      line-height: 26px;/* Приближение из-за подстановки шрифтов */
+      display: block;
+      text-decoration: none;
+      text-align: center;
+      position: absolute;              
+      top: 50%;
+      left: 50%;
+      margin-right: -50%;
+      transform: translate(-50%, -50%);
     }
