--- a/html-css/module-04/css/style.css
+++ b/html-css/module-04/css/style.css
@@ -86,7 +86,7 @@ img {
     color: #0f0101;
     font-size: 14px;/* Приближение из-за подстановки шрифтов */
     font-weight: 700;
-    line-height: 11px;/* Приближение из-за подстановки шрифтов */
+    line-height: 17px;
     text-align: right;
 }
   
