--- a/html-css/module-03/css/style.css
+++ b/html-css/module-03/css/style.css
@@ -144,4 +144,7 @@ button:focus {
     background-color:white;
     border: 1px solid #626262;
     color: #03a9f4;
+    margin: 0;
+    margin-top: 110px;
+    text-transform: uppercase;
 }
