--- a/html-css/module-05/css/style.css
+++ b/html-css/module-05/css/style.css
@@ -18,12 +18,13 @@ body {
     margin: 0;
 }
 
+.container {
+  width: 1140px;
+  margin: 0 auto;
+}
+
 .wrapper{
-    width: 1140px;
-    padding-left: 15px;
-    padding-right: 15px;
     padding-top: 38px;
-    padding-bottom: 80px;
     margin: 0 auto;
 }
 
@@ -40,7 +41,7 @@ img {
 }
 
 .page-header {
-  margin-bottom: 110px;
+  margin-bottom: 40px;
 }
 
 .site-logo {
@@ -95,10 +96,98 @@ img {
     color: #1abc9c;
 }
 
+
+/* SLIDER */
+
+.slider {
+  min-height: 600px;
+  background-image: url('../img/slide4.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.slider-title{
+  position: relative;
+  min-height: 600px;
+  text-align: left;
+  margin: auto;
+}
+
+.slider-ctrl{
+  display: inline-block;
+  width: 104px;
+  height: 104px;
+  border: 0;
+  background-color: #1abc9c;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-family: Pe;
+  color: #ffffff;
+  font-size: 100px;
+  line-height: 11px;
+  cursor: pointer;
+}
+
+.slider-ctrl-prev{
+  left: 0;
+}
+
+.slider-ctrl:hover {
+  background-color: rgba(78, 198, 171, 0.65);
+}
+
+.slider-ctrl-next{
+  right: 0;
+}
+
+.slides-list{
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: 45%;
+  left: 18%;
+  transform: translateY(-50%);
+  width: 1100px;
+  list-style: none;
+}
+
+.slides-item p{
+  color: #fff;
+  margin: 0;
+  padding: 0;
+  text-transform: uppercase;
+}
+
+.slides-title{
+  margin: auto;
+  margin-bottom: 35px;
+  color: #ffffff;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 50px;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 1.3;
+}
+
+.slides-descr{
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 1.3;
+  margin-bottom: 35px;
+}
+
 /*Featured products section*/
 
 .featured-products {
-  margin-bottom: 110px;
+  background-color: #e9f0fd;
+  width: 1600px;
+  height: 676px;
+  padding-top: 100px;
 }
 
 .sectoin-header {
@@ -145,7 +234,106 @@ margin-top: 32px;
     list-style: none;
     position: relative;/*1. указываем, элемент, от которого будет вестись отсчет положения абсолютно позиционированных элементов*/
   }
-  
+
+  .overlay {
+    width: 100%;
+    height: 271px;
+      border-width: 10px;
+      border-color: rgb(255, 255, 255);
+      border-style: solid;
+      background-color: rgb(0, 0, 0);
+      position: absolute;
+      opacity: 0;
+    }
+    
+    .features-list-item:hover .overlay {
+      opacity: 0.549;
+    }
+
+    .card:hover .social-icons {
+      opacity: 1;
+    }
+    
+   .social-icons {
+      opacity: 1;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 100%;
+      list-style: none;
+      padding: 0;
+      margin: 0 auto;
+    }
+    
+   .social-icons li {
+      float: left;
+      margin-right: 7px;
+      margin-bottom: 8px;
+    }
+
+    .social-icons li:last-child {
+      margin-right: 0px;
+    }
+        
+    .social-icons a {
+      display: block;
+      height: 50px;
+      width: 50px;
+      border: 1px solid white;
+      position: relative;  
+    }
+
+    .social-icons a img {
+      position: absolute;              
+      top: 50%;
+      left: 50%;
+      /*margin-right: -50%;*/
+      transform: translate(-50%, -50%);
+    }
+    
+    .social-icons a:hover {
+      border-width: 1px;
+      border-color: #1abc9c;
+      border-style: solid;
+      background-color: #1abc9c;
+      width: 48px;
+      height: 48px;
+    }
+
+    .card-button {
+      bottom: 0;
+      right: 0;
+      display: inline-block;
+      padding: 0;
+      margin: 0;
+      cursor: pointer;
+      opacity: 1;
+      border: 1px solid #ffffff;
+      width: 164px;
+      height: 48px;
+      color:#ffffff;
+      text-align: center;
+      text-transform: uppercase;
+      }
+    
+    .card-button:hover {
+      background-color: #323232;
+    }
+
+    .card-button::before {
+      display: inline-block;
+      content: '';
+      width: 28px;
+      height: 27px;
+      background-image: url('../img/cart.png');
+      background-size: contain;
+      background-position: center;
+      vertical-align: middle;
+      margin-right: 10px;
+
+    }
+
   .features-list li:nth-child(4n){
     margin-right: 0;
   }
@@ -166,7 +354,6 @@ margin-top: 32px;
     margin: 0;
     padding-top: 11px;
     padding-bottom: 11px;
-    
     font-family: 'Roboto', sans-serif;
     color: #ffffff;
     font-size: 18px;/* Приближение из-за подстановки шрифтов */
@@ -193,7 +380,7 @@ margin-top: 32px;
   }
   
   .features-list li:hover .features-list-price{
-    background-color: rgba(255, 255, 255, 0.44);
+    background-color: #7fd9c7;
   }
   
   .features-list-item{
@@ -274,3 +461,27 @@ margin-top: 32px;
       margin-right: -50%;
       transform: translate(-50%, -50%);
     }
+
+footer {
+  background-color: #323232;
+  height: 88px;
+  position: relative;
+}
+
+.footer-text {
+  color: #fefefe;
+  text-align: center;
+  font-size: 16px;/* Приближение из-за подстановки шрифтов */
+  font-weight: 400;
+  line-height: 28px;/* Приближение из-за подстановки шрифтов */
+  position: relative;              
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  margin-top: -4px;
+}
+
+.footer-colored-text {
+  color: #7fd9c7;
+}
