--- a/html-css/module-05/css/style.css
+++ b/html-css/module-05/css/style.css
@@ -21,11 +21,7 @@ body {
 .container {
   width: 1140px;
   margin: 0 auto;
-}
-
-.wrapper{
-    padding-top: 38px;
-    margin: 0 auto;
+  padding-top: 38px;
 }
 
 img {
@@ -135,12 +131,34 @@ img {
   left: 0;
 }
 
+.slider-ctrl-prev::before {
+  display: inline-block;
+  content: '';
+  width: 22px;
+  height: 38px;
+  background-image: url('../img/icon_prew.png');
+  background-size: contain;
+  background-position: center;
+  vertical-align: middle;
+}
+
 .slider-ctrl:hover {
   background-color: rgba(78, 198, 171, 0.65);
 }
 
 .slider-ctrl-next{
   right: 0;
+}
+
+.slider-ctrl-next::before {
+  display: inline-block;
+  content: '';
+  width: 22px;
+  height: 38px;
+  background-image: url('../img/icon_next.png');
+  background-size: contain;
+  background-position: center;
+  vertical-align: middle;
 }
 
 .slides-list{
@@ -265,63 +283,80 @@ margin-top: 32px;
       padding: 0;
       margin: 0 auto;
     }
-    
-   .social-icons li {
-      float: left;
-      margin-right: 7px;
-      margin-bottom: 8px;
-    }
 
-    .social-icons li:last-child {
-      margin-right: 0px;
-    }
-        
+
+   .social-icons li {
+    float: left;
+    margin-right: 7px;
+    margin-bottom: 8px;
+  }
+
+  .social-icons li:nth-child(3) {
+    margin-right: 0px;
+  }
+
+  .social-icons li:last-child {
+    margin-right: 0px;
+    margin-bottom: 0px;
+  }
+
     .social-icons a {
       display: block;
-      height: 50px;
-      width: 50px;
       border: 1px solid white;
       position: relative;  
     }
 
-    .social-icons a img {
-      position: absolute;              
-      top: 50%;
-      left: 50%;
-      /*margin-right: -50%;*/
-      transform: translate(-50%, -50%);
-    }
-    
-    .social-icons a:hover {
+    .social-icons-item-1:hover, .social-icons-item-2:hover, .social-icons-item-3:hover {
       border-width: 1px;
       border-color: #1abc9c;
       border-style: solid;
       background-color: #1abc9c;
       width: 48px;
       height: 48px;
+    } 
+
+    .social-icons-item-1, .social-icons-item-2, .social-icons-item-3 {
+      height: 50px;
+      width: 50px;
+      position: absolute;             
+      top: 50%;
+      background-repeat: no-repeat;
+      background-position: center;
     }
 
-    .card-button {
+    .social-icons-item-1 {
+      background-image: url('../img/heart.png');
+    }
+
+    .social-icons-item-2 {
+      background-image: url('../img/but.png');
+    }
+
+    .social-icons-item-3 {
+      background-image: url('../img/clock.png');
+    }
+
+    .cart-button {
       bottom: 0;
       right: 0;
-      display: inline-block;
-      padding: 0;
-      margin: 0;
+      padding: 0px;
+      margin: 0px;
+      position: absolute;  
       cursor: pointer;
       opacity: 1;
-      border: 1px solid #ffffff;
       width: 164px;
       height: 48px;
       color:#ffffff;
       text-align: center;
       text-transform: uppercase;
+      text-decoration: none;
       }
-    
-    .card-button:hover {
+  
+    .cart-button:hover {
       background-color: #323232;
     }
 
-    .card-button::before {
+    .cart-button::before {
       display: inline-block;
       content: '';
       width: 28px;
@@ -331,8 +366,8 @@ margin-top: 32px;
       background-position: center;
       vertical-align: middle;
       margin-right: 10px;
-
     }
+    
 
   .features-list li:nth-child(4n){
     margin-right: 0;
@@ -436,32 +471,7 @@ margin-top: 32px;
        margin-top: 30px;
     }
 
-    .btn {
-
-      display: block;
-      margin-top: 15px;
-      border-radius: 3px;
-      background-color: #4ec6ab;
-      width: 160px;
-      height: 51px;
-      position: relative;
-  }
-
-    .btn a {
-      color: #ffffff;
-      font-size: 16px;/* Приближение из-за подстановки шрифтов */
-      font-weight: 300;
-      line-height: 26px;/* Приближение из-за подстановки шрифтов */
-      display: block;
-      text-decoration: none;
-      text-align: center;
-      position: absolute;              
-      top: 50%;
-      left: 50%;
-      margin-right: -50%;
-      transform: translate(-50%, -50%);
-    }
-
+  
 footer {
   background-color: #323232;
   height: 88px;
