--- a/html-css/module-05/css/style.css
+++ b/html-css/module-05/css/style.css
@@ -92,7 +92,6 @@ img {
     color: #1abc9c;
 }
 
-
 /* SLIDER */
 
 .slider {
@@ -203,9 +202,8 @@ img {
 
 .featured-products {
   background-color: #e9f0fd;
-  width: 1600px;
-  height: 676px;
   padding-top: 100px;
+  padding-bottom: 86px;
 }
 
 .sectoin-header {
@@ -216,7 +214,6 @@ font-weight: 900;
 line-height: 32px;/* Приближение из-за подстановки шрифтов */
 text-align: center;
 margin: 0;
-/*margin-top: 110px;*/
 text-transform: uppercase;
 }
 
@@ -233,10 +230,12 @@ margin-top: 32px;
 /*features-list-css*/ 
 
 .features-list {
-    margin: 0;
-    margin-top: 90px;
     padding: 0;
     list-style: none;
+    position: relative;
+    display: table;
+    margin: 0 auto;
+    margin-top: 90px;
 }
 
 .features-list li {
@@ -251,34 +250,29 @@ margin-top: 32px;
     height: 322px;
     list-style: none;
     position: relative;/*1. указываем, элемент, от которого будет вестись отсчет положения абсолютно позиционированных элементов*/
+  
   }
 
   .overlay {
     width: 100%;
     height: 271px;
-      border-width: 10px;
-      border-color: rgb(255, 255, 255);
-      border-style: solid;
-      background-color: rgb(0, 0, 0);
-      position: absolute;
-      opacity: 0;
+    border-width: 10px;
+    border-style: solid;
+    background-color: rgba(0, 0, 0, 0.549);
+    border-color: rgb(255, 255, 255); 
+    position: absolute;
+    opacity: 0;
     }
     
     .features-list-item:hover .overlay {
-      opacity: 0.549;
-    }
-
-    .card:hover .social-icons {
       opacity: 1;
     }
     
    .social-icons {
-      opacity: 1;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 100%;
       list-style: none;
       padding: 0;
       margin: 0 auto;
@@ -301,18 +295,16 @@ margin-top: 32px;
   }
 
     .social-icons a {
-      display: block;
+      display: inline-block;
       border: 1px solid white;
       position: relative;  
     }
 
     .social-icons-item-1:hover, .social-icons-item-2:hover, .social-icons-item-3:hover {
-      border-width: 1px;
+      /*border-width: 1px;
       border-color: #1abc9c;
-      border-style: solid;
+      border-style: solid;*/
       background-color: #1abc9c;
-      width: 48px;
-      height: 48px;
     } 
 
     .social-icons-item-1, .social-icons-item-2, .social-icons-item-3 {
@@ -337,8 +329,6 @@ margin-top: 32px;
     }
 
     .cart-button {
-      bottom: 0;
-      right: 0;
       padding: 0px;
       margin: 0px;
       position: absolute;  
@@ -346,6 +336,7 @@ margin-top: 32px;
       opacity: 1;
       width: 164px;
       height: 48px;
+      line-height: 48px;
       color:#ffffff;
       text-align: center;
       text-transform: uppercase;
@@ -435,9 +426,9 @@ margin-top: 32px;
     float: left;
     margin-right: 30px;
     width: 350px;
-    /*height: 322px;*/
     list-style: none;
     position: relative;/*1. указываем, элемент, от которого будет вестись отсчет положения абсолютно позиционированных элементов*/
+    
   }
   
   .latest-news li:nth-child(3n){
@@ -450,7 +441,6 @@ margin-top: 32px;
     font-weight: 600;
     line-height: 26px;/* Приближение из-за подстановки шрифтов */
     text-align: left;
-    /*width: 301px;*/
     margin: 0;
     margin-top: 15px;
   }
