--- a/html-css/module-06/css/style.css
+++ b/html-css/module-06/css/style.css
@@ -11,146 +11,112 @@ html {
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
 }
 
 img {
   display: block;
   max-width: 100%;
-  height: auto;
+  /*height: auto;*/
 }
-  
-.masthead-wrapper {
-  background-image: -webkit-gradient (
-    linear,
-      left bottom, left top,
-      from(rgba(252, 227, 138, 0.81)),
-      to(rgba(243, 129, 129, 0.81))
-    ),
-    url('../img/Layer-15.jpg');
-  background-image: -webkit-linear-gradient(
-    bottom,
-      rgba(252, 227, 138, 0.81) 0%,
-      rgba(243, 129, 129, 0.81) 100%
-    ),
-    url('../img/Layer-15.jpg');
-  background-image: -o-linear-gradient(
-    bottom,
-      rgba(252, 227, 138, 0.81) 0%,
-      rgba(243, 129, 129, 0.81) 100%
-    ),
-    url('../img/Layer-15.jpg');
-  background-image: linear-gradient(
-    to top,
-      rgba(252, 227, 138, 0.81) 0%,
-      rgba(243, 129, 129, 0.81) 100%
-    ),
-    url('../img/Layer-15.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
 
 .container {
   max-width: 1200px;
-  margin: auto;
+  margin: 0 auto;
 }
-  
-.masthead-wrapper-banner {
-  min-height: 1000px;
+
+/*
+ * ========================================
+ * MASTHEAD
+ * ========================================
+ */
+ .masthead {
+  padding: 0;
+  margin-top: 30px;
 }
-  
-.masthead {
-  display: -webkit-box;
-  display: -ms-flexbox;
+
+.mastnav {
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  min-height: 80px;
-  margin-bottom: 150px;
+  /*margin-top: 30px;*/
 }
-  
-.logo {
+
+/*
+ * ========================================
+ * LOGO
+ * ========================================
+ */
+ .logo {
   display: inline-block;
-  color: #ffffff;
-  font-size: 30px;
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  color: #95e1d3;
+  font-size: 30px;/* Приближение из-за подстановки шрифтов */
   font-weight: 700;
-  text-decoration: none;
+  text-align: left;
 }
 
-.masthead-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
+/*
+ * ========================================
+ * SITE NAV
+ * ========================================
+ */
+ .site-nav {
   display: flex;
-}
-
-.nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  margin: 0;
+  margin-left: auto;
   padding: 0;
-  margin: 28px 0 0 0;
+  list-style: none;
 }
-  
-.site-nav-item, .user-nav-item {
-  display: inline-block;
-  margin-left: 50px;
-}
-  
-.site-nav-item:first-child {
-  margin-left: 0;
-}
-  
-.site-nav-link, .user-nav-link {
+
+.site-nav a {
   display: block;
-  border-bottom: 3px solid transparent;
+  padding: 0px 16px;
   text-decoration: none;
-}
-
-.site-nav-link {
-  color: #ffffff;
-  font-size: 14px;
-  line-height: 14px;
-  font-weight: 400;
   text-transform: uppercase;
-  padding-bottom: 7px;
+  font-family: 'Montserrat', sans-serif;
+  color: #95e1d3;
+  font-size: 14px;/* Приближение из-за подстановки шрифтов */
+  font-weight: 400;
+  text-align: center;
 }
 
-.site-nav-link:hover, .user-nav-link:hover {
-  color: #fce38a;
-  border-color: #fce38a;
+.site-nav a::after {
+  display: block;
+  content: '';
+  width: 0;
+  margin-top: 4px;
+  height: 3px;
+  background-color: #f38181;
+  transition: width 200ms linear;
 }
 
-.shopping-cart:hover > #a, .magnifying-glass:hover > #b {
-  fill: #fce38a;
+.site-nav a:hover {
+  color: #f38181;
 }
 
-.masthead-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.site-nav a:hover::after {
+  width: 100%;
 }
 
-.nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 0;
-  margin: 28px 0 0 0;
+/*
+ * ========================================
+ * MAIN
+ * ========================================
+ */
+ .main {
+  flex-grow: 1;
 }
-  
-/* SERVICES */
-.services-wrapper {
-  background-color: #ffffff;
-}
+
+/*
+ * ========================================
+ * SERVICES SECTION
+ * ========================================
+ */
 
 .section {
-  padding: 60px 0  30px 0;
+  margin-top: 90px;
 }
 
 .header {
@@ -171,11 +137,13 @@ img {
 }
   
 .header-title {
-  color: #333;
-  font-size: 30px;
-  font-weight: 700;
-  line-height: 30px;
-  text-transform: uppercase;
+font-family: 'Montserrat', sans-serif;
+color: #333333;
+font-size: 30px; /* Приближение из-за подстановки шрифтов */
+font-weight: 700;
+text-align: center;
+text-transform: uppercase;
+margin-bottom: 0px;
 }
   
 .header-title::after {
@@ -189,311 +157,280 @@ img {
   background-color: #f38181;
 }
 
-.services-header-title {
-  margin: 0 0 65px 0;
-}
-
-  
-/* SERVICES LIST*/
-.list {
-  margin: 0;
-  padding: 0;
-}
-
-.services-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
+ .services-list {
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  list-style-type: none;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+  margin-right: 30px;
+  margin-left: 30px;
+  list-style: none;
 }
- 
-.services-item {
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 30%;
-  flex: 0 0 30%;
-  margin-bottom: 46px;
+
+.services-list li {
+  flex-basis: calc(33.3333% - 30px);
+  flex-grow: 0;
   position: relative;
-  padding-left: 40px;
-}
-  
-.services-item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
-  
-.service {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-  
-.service-content::before {
-  display: inline-block;
-  content: "";
-  width: 32px;
-  height: 32px;
-  background-repeat: no-repeat;
-  background-position: center;
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
-.photography::before {
-  background-image: url("../img/svg/icon_alarm.jpg");
+.services-list li:not(:nth-last-child(-n + 3)) {
+  margin-bottom: 30px;
 }
 
-.web-design::before {
-  background-image: url("../img/svg/icon_graph.jpg");
-}
-
-.creativity::before {
-  background-image: url("../img/svg/icon_computer.jpg");
-}
-
-.seo::before {
-  background-image: url("../img/svg/icon_book.jpg");
-}
-
-.css-html::before {
-  background-image: url("../img/svg/icon_home.jpg");
-}
-.digital::before {
-  background-image: url("../img/svg/icon_image.jpg");
-}
-
-.service-name {
-  display: block;
-  margin-bottom: 14px;
+.article-name {
+  font-family: 'Montserrat', sans-serif;
   color: #333333;
-  font-size: 14px;
-  font-weight: 700;
+  display: block;
+  font-size: 14px; /* Приближение из-за подстановки шрифтов */
+  font-weight: 400;
+  text-align: left;
+  font-weight: 400;
   text-transform: uppercase;
-  margin: 0 0 14px 0;
-}
-  
-.service-text {
+  margin: -4px 0 14px 0;
+  }
+    
+.article-text {
   color: #999999;
-  font-family: "Roboto", sans-serif;
   font-size: 15px;
   font-weight: 400;
   line-height: 24px;
   margin: 0;
-}
+  }
+
+.article {
+  position: relateve;
+  padding-left: 62px;
+  }
+    
+.article::before {
+  display: inline-block;
+  content: '';
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  }
+  
+  .photography::before {
+    background-image: url("../img/png/icon_alarm.jpg");
+  }
+  
+  .web-design::before {
+    background-image: url("../img/png/icon_graph.jpg");
+  }
+  
+  .creativity::before {
+    background-image: url("../img/png/icon_computer.jpg");
+  }
+  
+  .seo::before {
+    background-image: url("../img/png/icon_book.jpg");
+  }
+  
+  .css-html::before {
+    background-image: url("../img/png/icon_home.jpg");
+  }
+  .digital::before {
+    background-image: url("../img/png/icon_image.jpg");
+  }
 
 
-/* TEAM */
-.team-wrapper {
-  background-color: #ffffff;
-}
+/*
+ * ========================================
+ * TEAM SECTION
+ * ========================================
+ */
 
-.header-title {
+ .header-title {
   margin: 0 0 46px 0;
 }
 
 .header-text {
   color: #999999;
-  font-family: "Roboto", sans-serif;
   font-size: 15px;
   font-weight: 400;
   line-height: 24px;
+  margin-top: 45px;
 }
 
-/* TEAM LIST */
-.team-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  list-style-type: none;
-}
-  
-.team-item {
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 30%;
-  flex: 0 0 30%;
-}
-  
-.team-card {
-  background-color: #95e1d3;
-}
-  
-.team-card:hover .card-content {
-  -webkit-transform: translate(-10px, -10px);
-  -ms-transform: translate(-10px, -10px);
-  transform: translate(-10px, -10px);
-}
-  
-.team-card:hover .card-content::after {
-  opacity: 1;
-}
-  
-.team-card:hover .social-links {
-  opacity: 1;
-}
-  
-.card-content {
-  position: relative;
-  -webkit-transition: -webkit-transform 0.2s linear;
-  transition: -webkit-transform 0.2s linear;
-  -o-transition: transform 0.2s linear;
-  transition: transform 0.2s linear;
-  transition: transform 0.2s linear, -webkit-transform 0.2s linear;
-}
-  
-.card-content::after {
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: inline-block;
+.clearfix::after {
+  display: table;
   content: '';
-  background-image: -webkit-gradient(
-    linear,
-    left bottom, left top,
-    from(rgba(252, 227, 138, 0.81)),
-    to(rgba(243, 129, 129, 0.81))
-  );
-  background-image: -webkit-linear-gradient(
-    bottom,
-    rgba(252, 227, 138, 0.81) 0%,
-    rgba(243, 129, 129, 0.81) 100%
-  );
-  background-image: -o-linear-gradient(
-    bottom,
-    rgba(252, 227, 138, 0.81) 0%,
-    rgba(243, 129, 129, 0.81) 100%
-  );
-  background-image: linear-gradient(
-    to top,
-    rgba(252, 227, 138, 0.81) 0%,
-    rgba(243, 129, 129, 0.81) 100%
-  );
-  -webkit-transition: opacity 0.2s linear;
-  -o-transition: opacity 0.2s linear;
-  transition: opacity 0.2s linear;
+  clear: both;
+}
+
+.team-list {
+display: flex;
+flex-wrap: wrap;
+justify-content: space-between;
+list-style: none;
+margin-bottom: 80px;
+padding: 0;
+}
+
+.team-list li {
+flex-basis: calc(33.3333% - 30px);
+flex-grow: 0;
+}
+
+.team-list-item{
+  float: left;
+  margin-right: 30px;
+  width: 380px;
+  height: 470px;
+  position: relative;/*1. указываем, элемент, от которого будет вестись отсчет положения абсолютно позиционированных элементов*/
+}
+
+.overlay {
+position: absolute;
+width: 100%;
+height: 470px;
+display: flex;
+align-items: center;
+justify-content: center;
+opacity: 0;
+transform: translate(-10px, -10px);
+transition: opacity 200ms linear;
+background-image: linear-gradient(
+  to top,
+  rgba(252, 227, 138, 0.81) 0%,
+  rgba(243, 129, 129, 0.81) 100%);
+  box-shadow: 10px 10px 0px 0px #95e1d3;
+ }
+  
+  .team-list-item:hover .overlay {
+    opacity: 1;
 }
   
-.social-links {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  z-index: 1;
-  -webkit-transition: opacity 0.2s linear;
-  -o-transition: opacity 0.2s linear;
-  transition: opacity 0.2s linear;
+ .social-icons {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    list-style: none;
+    padding: 0;
+    margin: 0 auto;
+  }
+
+.social-icons li:last-child {
+  margin-right: 0px;
+  margin-bottom: 0px;
 }
-  
-.social-links-item {
-  display: inline-block;
-  width: 56px;
-  height: 56px;
-  margin-right: 2px;
-  background-color: #fce38a;
+
+ .social-icons a {
+    display: block;
+    border: 1px solid #f38181;
+    background-color: #fce38a;
+    height: 56px;
+    width: 56px;
+    z-index: 1;
+  }
+
+    .visually-hidden {
+    position: absolute;
+  }
+
+  .social-icons-item-1:hover, .social-icons-item-2:hover, .social-icons-item-3:hover, .social-icons-item-4:hover {
+    background-color: #95e1d3;
+  } 
+
+  .social-icons-item-1, .social-icons-item-2, .social-icons-item-3, .social-icons-item-4 {
+    height: 56px;
+    width: 56px;
+    top: 50%;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  .social-icons-item-1 {
+  background-image: url('../img/png/facebook.png');
+}
+
+.social-icons-item-2 {
+  background-image: url('../img/png/twitter.png');
+}
+
+.social-icons-item-3 {
+  background-image: url('../img/png/pinterest.png');
+}
+
+.social-icons-item-4 {
+  background-image: url('../img/png/instagram.png');
+}
+
+.team-list li:nth-child(3n){
+  margin-right: 0;
+margin-bottom: 0px;
+}
+
+.team-member{
   position: relative;
 }
-  
-.social-links-item:last-child {
-  margin-right: 0;
+
+.team-member-name, .team-member-position {
+ display: block;
+ text-align: center;
 }
 
-.social-links-icon {
-  display: inline-block;
-  width: 25px;
-  height: 25px;
-  fill: #f38181;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+.team-member-name {
+font-family: 'Montserrat', sans-serif;
+margin: 30px 0 14px 0;
+color: #333333;
+font-size: 14px;
+font-weight: 400;
+text-transform: uppercase;
 }
 
-.social-links-item:hover {
-  background-color: #f38181;
+.team-member-position {
+color: #999999;
+font-size: 15px;
+font-weight: 300;
+font-style: italic;
+line-height: 24px;
+margin: 0;
 }
   
-.social-links-item:hover > .social-links-icon {
-  fill: #ffffff;
-}
-  
-.team-card-meta {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  padding: 31px 0;
-  background: #ffffff;
-}
-  
-.card-meta-name {
-  display: block;
-  margin-bottom: 14px;
-  color: #333333;
-  font-size: 14px;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-  
-.card-meta-pos {
-  display: block;
-  color: #999999;
-  font-family: "Roboto", sans-serif;
-  font-size: 15px;
-  font-weight: 400;
-  font-style: italic;
-  line-height: 24px;
+/*
+ * ========================================
+ * FOOTER
+ * ========================================
+ */
+
+footer {
+  position: relative;
+  padding-top: 80px;
 }
 
-/* FOOTER */
 .footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
   border-top: 1px solid #e5e5e5;
   padding: 25px 0;
 }
 
 .footer-text {
-  font-size: 14px;
-  font-weight: 700;
+  font-family: 'Montserrat', sans-serif;
   color: #333333;
+  font-size: 14px;/* Приближение из-за подстановки шрифтов */
+  font-weight: 400;
+  text-align: center;
+  color: #333333;
+  margin: 0;
 }
 
-.colortext {
+.footer-colored-link {
   color: #f38181;
+  text-decoration: none;
 }
 
 .form-inp {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   color: #cccccc;
   font-size: 15px;
   line-height: 16px;
   font-style: italic;
+  font-weight: 400;
   padding: 11px 0 11px 11px;
   width: 230px;
   border: 1px solid #e5e5e5;
@@ -501,6 +438,7 @@ img {
 }
 
 .form-btn {
+  font-family: 'Montserrat', sans-serif;
   color: #ffffff;
   font-size: 14px;
   font-weight: 700;
@@ -509,35 +447,4 @@ img {
   text-transform: uppercase;
   height: 40px;
   border: 1px solid #95e1d3;
-}
-
-/* MEDIA*/
-@media (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 2/1), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-  .masthead-wrapper {
-    background-image: -webkit-gradient (
-      linear,
-        left bottom, left top,
-        from(rgba(252, 227, 138, 0.81)),
-        to(rgba(243, 129, 129, 0.81))
-      ),
-      url("../img/Layer-15@2x.jpg");
-    background-image: -webkit-linear-gradient(
-      bottom,
-        rgba(252, 227, 138, 0.81) 0%,
-        rgba(243, 129, 129, 0.81) 100%
-      ),
-      url("../img/Layer-15@2x.jpg");
-    background-image: -o-linear-gradient(
-      bottom,
-        rgba(252, 227, 138, 0.81) 0%,
-        rgba(243, 129, 129, 0.81) 100%
-      ),
-      url("../img/Layer-15@2x.jpg");
-    background-image: linear-gradient(
-      to top,
-        rgba(252, 227, 138, 0.81) 0%,
-        rgba(243, 129, 129, 0.81) 100%
-      ),
-      url("../img/Layer-15@2x.jpg");
-  }
 }
