--- a/html-css/module-06/css/style.css
+++ b/html-css/module-06/css/style.css
@@ -118,20 +118,22 @@ img {
   padding-top: 90px;
 }
 
-.header {
+.section-header {
   margin: auto;
   text-align: center;
   margin-bottom: 65px;
 }
 
 .header-caption {
-  display: block;
+  /*display: block;*/
   margin-bottom: 24px;
   color: #333;
   font-family: 'Kaushan Script', cursive;
   font-size: 24px;
   font-weight: 400;
   line-height: 24px;
+  margin: 0;
+  padding-bottom: 24px;
 }
   
 .header-title {
@@ -249,6 +251,8 @@ margin-bottom: 0px;
   font-weight: 400;
   line-height: 24px;
   margin-top: 45px;
+  width: 980px;
+  margin: auto;
 }
 
 .clearfix::after {
@@ -262,20 +266,23 @@ display: flex;
 flex-wrap: wrap;
 justify-content: space-between;
 list-style: none;
-margin-bottom: 80px;
-padding: 0;
-}
-
-.team-list li {
-flex-basis: calc(33.3333% - 30px);
-flex-grow: 0;
+padding: 0 0 80px 0;
+margin: 0;
 }
 
 .team-list-item{
-  margin-right: 30px;
-  width: 380px;
-  height: 470px;
+  flex: 0 0 380px;
   position: relative;/*1. указываем, элемент, от которого будет вестись отсчет положения абсолютно позиционированных элементов*/
+}
+
+.team-member-photo {
+  transition: transform 200ms linear, opacity 200ms linear;
+}
+
+.team-list-item:hover .team-member-photo {
+transform: translate(-10px, -10px);
+opacity: 0.1;
+
 }
 
 .overlay {
@@ -286,7 +293,7 @@ display: flex;
 align-items: center;
 justify-content: center;
 opacity: 0;
-transition: opacity 300ms linear;
+/*transition: transform 200ms linear, opacity 200ms linear;*/
 background-image: linear-gradient(
   to top,
   rgba(252, 227, 138, 0.81) 0%,
@@ -298,7 +305,7 @@ background-image: linear-gradient(
     transform: translate(-10px, -10px);
     box-shadow: 10px 10px 0px 0px #95e1d3;
 }
-  
+
  .social-icons {
     display: flex;
     flex-direction: row;
@@ -322,10 +329,6 @@ background-image: linear-gradient(
     z-index: 1;
     transition: background-color 300ms linear;
   }
-
-  /*.social-icons a :not(:last-child) {
-    border-right: none;
-  }*/
 
     .visually-hidden {
     position: absolute;
@@ -393,10 +396,6 @@ margin: 0;
 padding-top: 14px;
 }
 
-.team {
-  padding-bottom: 90px;
-}
-  
 /*
  * ========================================
  * FOOTER
