--- a/html-css/module-06/css/style.css
+++ b/html-css/module-06/css/style.css
@@ -125,15 +125,12 @@ img {
 }
 
 .header-caption {
-  /*display: block;*/
-  margin-bottom: 24px;
   color: #333;
   font-family: 'Kaushan Script', cursive;
   font-size: 24px;
   font-weight: 400;
   line-height: 24px;
-  margin: 0;
-  padding-bottom: 24px;
+  margin: 0 0 24px 0;
 }
   
 .header-title {
@@ -179,7 +176,6 @@ margin-bottom: 0px;
 .article-name {
   font-family: 'Montserrat', sans-serif;
   color: #333333;
-  display: block;
   font-size: 14px; /* Приближение из-за подстановки шрифтов */
   font-weight: 400;
   text-align: left;
@@ -281,7 +277,6 @@ margin: 0;
 
 .team-list-item:hover .team-member-photo {
 transform: translate(-10px, -10px);
-opacity: 0.1;
 
 }
 
@@ -298,6 +293,7 @@ background-image: linear-gradient(
   to top,
   rgba(252, 227, 138, 0.81) 0%,
   rgba(243, 129, 129, 0.81) 100%);
+  z-index: 1;
  }
   
   .team-list-item:hover .overlay {
@@ -344,6 +340,7 @@ background-image: linear-gradient(
 
   .social-icons-item-1:hover, .social-icons-item-2:hover, .social-icons-item-3:hover, .social-icons-item-4:hover {
     background-color: #95e1d3;
+    transition: background-color 300ms linear;
   } 
 
   .social-icons-item-1 {
@@ -379,7 +376,7 @@ margin-bottom: 0px;
 
 .team-member-name {
 font-family: 'Montserrat', sans-serif;
-margin: 0;
+margin: 0 0 14px 0;
 color: #333333;
 font-size: 14px;
 font-weight: 400;
@@ -393,7 +390,6 @@ font-weight: 300;
 font-style: italic;
 line-height: 24px;
 margin: 0;
-padding-top: 14px;
 }
 
 /*
