--- a/html-css/module-08/css/style.css
+++ b/html-css/module-08/css/style.css
@@ -34,7 +34,10 @@ img {
 .container {
   min-width: 320px;
   max-width: 940px;
+  height: 320px;
   margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .banner {
@@ -69,6 +72,8 @@ nav {
 
 .nav {
   display: flex;
+  margin: 0;
+  padding: 0;
 }
 
 .nav-item {
@@ -98,12 +103,13 @@ nav {
 
 .home-title {
   width: 500px;
-  margin: 0 auto;
-  padding-bottom: 35px;
+  margin: 0;
+  margin-bottom: 35px;
   color: #ffffff;
   font-size: 50px;
   text-transform: uppercase;
   line-height: 1.3;
+  padding: 0;
 }
 
 .home-slogan {
@@ -113,7 +119,8 @@ nav {
   font-weight: 300;
   line-height: 1.3;
   margin: 0;
-  padding-bottom: 35px;
+  margin-bottom: 35px;
+  padding: 0;
 }
 
 .home-btn {
@@ -159,7 +166,7 @@ nav {
   margin: 0;
   padding: 0;
   list-style: none;
-  text-align:center;
+  text-align: center;
 }
 
 .partners-list li {
@@ -168,15 +175,16 @@ nav {
 
 .partners-list-item {
   width: 220px;
-  margin-bottom: 20px;
+  margin: 0;
+  padding: 0;
 }
 
-.partners-card {
+/*.partners-card {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: auto;
-}
+}*/
 
 .partners-card-photo {
   position: relative;
@@ -194,10 +202,11 @@ nav {
   content: '';
   width: 36px;
   height: 36px;
-  border-radius: 50%;
+  /*border-radius: 50%;*/
   border: 4px solid #ffffff;
   background-repeat: no-repeat;
   background-position: center;
+  right: 50px;
 }
 
 .icon-1::before {
@@ -223,8 +232,9 @@ nav {
 .partners-card-name {
   color: #333333;
   text-align: center;
-  margin-top: 20px;
-  margin-bottom: 15px;
+  margin: 0;
+  padding-top: 20px;
+  padding-bottom: 15px;
 }
 
 .partners-card-text {
@@ -234,11 +244,13 @@ nav {
   font-weight: 300;
   text-align: center;
   line-height: 1.3;
+  margin: 0;
 }
 
 .partners-btn {
   display: block;
   margin: auto;
+  margin-top: 40px;
   width: 200px;
   line-height: 40px;
   text-align: center;
@@ -312,7 +324,6 @@ nav {
 
   .partners-list-item {
     flex: 0 0 35%;
-    margin-bottom: 50px;
   }
   
   .partners-list-item:nth-last-child(-n +2) {
