--- a/html-css/module-08/css/style.css
+++ b/html-css/module-08/css/style.css
@@ -66,6 +66,7 @@ img {
   text-align: center;
   margin: auto;
   margin-top: 35px;
+  padding-bottom: 140px;
 }
 
 .home-title {
@@ -101,7 +102,7 @@ img {
   text-decoration: none;
   background-color: #ff4e50;
   border: 2px solid transparent;
-  margin-bottom: 140px;
+  /*margin-bottom: 140px;*/
 }
 
 .home-btn:hover {
@@ -127,7 +128,7 @@ img {
   color: #333333;
   font-size: 22px;
   margin: 0 auto;
-  padding-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 /* PARTNERS LIST */
@@ -195,12 +196,16 @@ img {
   background-color: #4e73db;
 }
 
+.partners-card-img {
+  border-radius: 50%;
+}
+
 .partners-card-name {
   color: #333333;
   text-align: center;
   margin: 0;
   padding: 0;
-  padding-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .partners-card-text {
